added dispels miscellaneous

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,6 +18,10 @@
 	path = libs/oUF_TargetIndicator
 	url = https://github.com/lua-wow/oUF_TargetIndicator.git
 	branch = master
+[submodule "modules/miscellaneous/dispels"]
+	path = modules/miscellaneous/dispels
+	url = https://github.com/lua-wow/dispels.git
+	branch = master
 [submodule "modules/miscellaneous/interrupts"]
 	path = modules/miscellaneous/interrupts
 	url = https://github.com/lua-wow/interrupts.git
