fix dispelable auras highlight

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,11 @@
 	path = modules/miscellaneous/interrupts
 	url = https://github.com/lua-wow/interrupts.git
 	branch = master
+[submodule "libs/LibStub"]
+	path = libs/LibStub
+	url = https://github.com/lua-wow/LibStub.git
+	branch = master
+[submodule "libs/LibDispel"]
+	path = libs/LibDispel
+	url = https://github.com/lua-wow/LibDispel.git
+	branch = master
